--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "npm run build:main && npm run testscript",
 		"tsc": "tsc",
 		"testscript": "node -r ts-node/register test.ts",
 		"build:doc": "typedoc",
@@ -44,8 +45,10 @@
 		"@types/shortid": "0.0.29",
 		"debug": "^4.1.1",
 		"express": "^4.17.1",
+		"freetype2": "^0.3.1",
 		"lodash": "^4.17.15",
 		"md5.js": "^1.3.5",
+		"path": "^0.12.7",
 		"socket.io": "^2.3.0",
 		"socket.io-client": "^2.3.0",
 		"varstruct": "^6.1.3"
