--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "bitnet4",
+	"name": "grafikk",
 	"version": "1.0.0",
 	"bitnet_protocol_version": "1.0.0",
 	"description": "",
@@ -38,6 +38,7 @@
 		"typescript": "^3.7.5"
 	},
 	"dependencies": {
+		"@julusian/freetype2": "^0.5.0-0",
 		"@types/bson": "^4.0.0",
 		"@types/lodash": "^4.14.144",
 		"@types/network-interfaces": "^1.1.0",
@@ -45,7 +46,6 @@
 		"@types/shortid": "0.0.29",
 		"debug": "^4.1.1",
 		"express": "^4.17.1",
-		"freetype2": "^0.3.1",
 		"lodash": "^4.17.15",
 		"md5.js": "^1.3.5",
 		"path": "^0.12.7",
