Almost, but want to try something else

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
 	"cSpell.words": ["consts", "mdns", "portconfig", "portfinder", "readpackage"],
 	"prettier.useTabs": true,
 	"prettier.singleQuote": true,
-	"editor.formatOnSave": true
+	"editor.formatOnSave": false
 }
