--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"start": "nodemon --exec node -r ts-node/register test.ts",
-		"build": "tsc",
 		"testscript": "node -r ts-node/register test.ts",
 		"build:doc": "typedoc",
-		"build:main": "tsc -p tsconfig.build.json",
+		"build": "tsc -p tsconfig.build.json",
 		"test": "mocha -r ts-node/register src/tests/*.test.ts",
 		"lint": "tslint --project tsconfig.json --config tslint.json",
 		"lint-fix": "eslint --fix test.js index.js src",
@@ -17,8 +16,8 @@
 		"prepare": "npm run build"
 	},
 	"keywords": [],
-	"author": "Håkon Nessjøen <haakon@bitfocus.io>",
-	"license": "MIT",
+	"author": "William Viker <william@bitfocus.io>",
+	"license": "Closed Source",
 	"devDependencies": {
 		"@types/chai": "^4.2.7",
 		"@types/debug": "^4.1.5",
@@ -36,7 +35,10 @@
 		"tslint": "^6.0.0",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.1.0",
+		"socket.io": "^2.3.0",
 		"typedoc": "^0.16.9",
+		"socket.io-client": "^2.3.0",
+		"express": "^4.17.1",
 		"typescript": "^3.7.5"
 	},
 	"dependencies": {
@@ -47,12 +49,9 @@
 		"@types/semver": "^6.0.2",
 		"@types/shortid": "0.0.29",
 		"debug": "^4.1.1",
-		"express": "^4.17.1",
 		"lodash": "^4.17.15",
 		"md5.js": "^1.3.5",
 		"path": "^0.12.7",
-		"socket.io": "^2.3.0",
-		"socket.io-client": "^2.3.0",
 		"varstruct": "^6.1.3"
 	}
 }
