--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "nodemon --exec node -r ts-node/register test.ts",
 		"testscript": "node -r ts-node/register test.ts",
 		"build:doc": "typedoc",
-		"build": "tsc -p tsconfig.build.json",
+		"build": "tsc -p tsconfig.json",
 		"test": "mocha -r ts-node/register src/tests/*.test.ts",
 		"lint": "tslint --project tsconfig.json --config tslint.json",
 		"lint-fix": "eslint --fix test.js index.js src",
